// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapsible matches snapshot when is not open 1`] = `
.emotion-1 {
  color: inherit;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 [data-element='title'] {
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.emotion-3:hover {
  cursor: pointer;
}

.emotion-3:hover [data-element='title'] {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.emotion-2 {
  margin-bottom: -2px;
  color: #879ba6;
}

.emotion-0 {
  display: inline-block;
  color: rgba(135,155,166,0.7);
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.88rem;
  overflow: hidden;
  text-overflow: ellipsis;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    font-size: 0.8rem;
  }
}

<div
  className="emotion-4"
>
  <div
    className="emotion-3"
  >
    <div
      data-element="title"
    >
      <div
        className="emotion-0"
      >
        Title
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <i
        className="emotion-1 Drycon Drycon-chevron-down"
      />
    </div>
  </div>
</div>
`;

exports[`Collapsible matches snapshot when it is open 1`] = `
.emotion-1 {
  color: inherit;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 [data-element='title'] {
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.emotion-3:hover {
  cursor: pointer;
}

.emotion-3:hover [data-element='title'] {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.emotion-2 {
  margin-bottom: -2px;
  color: #879ba6;
}

.emotion-4 {
  padding-top: 8px;
}

.emotion-0 {
  display: inline-block;
  color: rgba(135,155,166,0.7);
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.88rem;
  overflow: hidden;
  text-overflow: ellipsis;
}

@media only screen and (max-width:768px) {
  .emotion-0 {
    font-size: 0.8rem;
  }
}

<div
  className="emotion-5"
>
  <div
    className="emotion-3"
  >
    <div
      data-element="title"
    >
      <div
        className="emotion-0"
      >
        Title
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <i
        className="emotion-1 Drycon Drycon-chevron-up"
      />
    </div>
  </div>
  <div
    className="emotion-4"
  >
    Collapsible content
  </div>
</div>
`;

exports[`Collapsible matches snapshot when the title is a node 1`] = `
.emotion-1 {
  color: inherit;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.emotion-3 [data-element='title'] {
  -webkit-transition: all 0.15s ease-in-out;
  transition: all 0.15s ease-in-out;
}

.emotion-3:hover {
  cursor: pointer;
}

.emotion-3:hover [data-element='title'] {
  -webkit-transform: translateX(5px);
  -ms-transform: translateX(5px);
  transform: translateX(5px);
}

.emotion-2 {
  margin-bottom: -2px;
  color: #879ba6;
}

.emotion-4 {
  padding-top: 8px;
}

.emotion-0 {
  display: inline;
  color: #172b4e;
  font-size: 1rem;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-3"
  >
    <div
      data-element="title"
    >
      <span
        className="emotion-0"
      >
        The title
      </span>
    </div>
    <div
      className="emotion-2"
    >
      <i
        className="emotion-1 Drycon Drycon-chevron-up"
      />
    </div>
  </div>
  <div
    className="emotion-4"
  >
    Collapsible content
  </div>
</div>
`;
